<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/court1_blur_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llBlack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#50000000"
        android:orientation="vertical" />

    <!--Кнопки главного меню-->
    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <!--Кнопка Start-->
        <LinearLayout
            android:id="@+id/btStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="15dp"
                android:alpha="0.9"
                android:clickable="false"
                android:fontFamily="@font/allerta"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Кнопка Record-->
        <LinearLayout
            android:id="@+id/btRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="15dp"
                android:alpha="0.9"
                android:clickable="false"
                android:fontFamily="@font/allerta"
                android:text="@string/record"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <!--Кнопка Exit-->
        <LinearLayout
            android:id="@+id/btExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="15dp"
                android:alpha="0.9"
                android:clickable="false"
                android:fontFamily="@font/allerta"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:fontFamily="@font/allerta"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />
</androidx.constraintlayout.widget.ConstraintLayout>